# Jacobian-Chaining

./: CMakeLists.txt  README.md  block_schedule.md  run.sh  run_batch_gpu.sh  run_local_gpu.sh  single_run.sh
additionals/cmake/: compiler_flags.cmake  enable_intrinsics.cmake  openmp_backend.cmake
additionals/configs/: config.in
include/jcdp/: CMakeLists.txt  deviceSequence.hpp  operation.hpp  sequence.hpp
include/jcdp/optimizer/: CMakeLists.txt  bnb_block.hpp  branch_and_bound.hpp
include/jcdp/scheduler/: CMakeLists.txt  README.md  bnb_block.hpp  branch_and_bound.hpp  branch_and_bound_gpu.hpp  priority_list.hpp  scheduler.hpp
src/: CMakeLists.txt  branch_and_bound_gpu_offload.cpp  jcdp.cpp  jcdp_batch.cpp
